# zenscript

./: .ghlobes.toml  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  blueprint.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/rules/: architecture.md  design.md  docs.md  example-app.md  floe-quality.md  workflow.md  worktrees.md
.github/: dependabot.yml  release-please-config.json
.github/workflows/: ci.yml  deploy-docs.yml  pr-labeler.yml  release-please.yml  release.yml
crates/floe-wasm/: Cargo.toml
crates/floe-wasm/src/: lib.rs
docs/: design.md  llms.txt
docs/site/: astro.config.mjs  package-lock.json  package.json
editors/neovim/: README.md  lsp.lua
editors/tree-sitter-floe/: grammar.js
editors/vscode/: language-configuration.json  package-lock.json  package.json  tsconfig.json
examples/store/: index.html  package.json  vite.config.ts
examples/store-ts/: package.json
examples/todo-app/: index.html  package-lock.json  package.json  vite.config.ts
integrations/vite-plugin-floe/: package.json
playground/: build.sh  index.html
scripts/: dev-vscode.sh  test-lsp.py
src/: checker.rs  codegen.rs  cst.rs  desugar.rs  diagnostic.rs  formatter.rs  interop.rs  lexer.rs  lib.rs  lower.rs  lsp.rs  main.rs  parser.rs  resolve.rs  sourcemap.rs  stdlib.rs  syntax.rs  type_layout.rs  type_names.rs  walk.rs
src/checker/: expr.rs  match_check.rs  tests.rs  types.rs
src/codegen/: expr.rs  match_emit.rs  tests.rs
src/formatter/: expr.rs  items.rs  jsx.rs  tests.rs
src/interop/: dts.rs  tests.rs  ts_types.rs  tsgo.rs  wrapper.rs
src/lexer/: span.rs  token.rs
src/lower/: expr.rs  jsx.rs  pattern.rs
src/lsp/: completion.rs  handlers.rs  resolution.rs  stdlib_hover.rs  symbols.rs  tests.rs
src/parser/: ast.rs  expr.rs  jsx.rs  pattern.rs  tests.rs
tests/: snapshot_codegen.rs  snapshot_errors.rs
tests/fixtures/: array_patterns.fl  collect.fl  constructors.fl  deriving.fl  for_blocks.fl  functions.fl  hello.fl  imports.fl  jsx_component.fl  match_expr.fl  match_option.fl  partial_application.fl  pipe_unwrap.fl  pipes.fl  record_spread.fl  result_option.fl  stdlib.fl  string_patterns.fl  structural_equality.fl  todo_unreachable.fl  traits.fl  types.fl  unit_type.fl
tests/snapshots/: snapshot_codegen__snapshot_array_patterns.snap  snapshot_codegen__snapshot_collect.snap  snapshot_codegen__snapshot_constructors.snap  snapshot_codegen__snapshot_deriving.snap  snapshot_codegen__snapshot_dot_shorthand.snap  snapshot_codegen__snapshot_for_blocks.snap  snapshot_codegen__snapshot_functions.snap  snapshot_codegen__snapshot_hello.snap  snapshot_codegen__snapshot_match_expr.snap  snapshot_codegen__snapshot_match_option.snap  snapshot_codegen__snapshot_partial_application.snap  snapshot_codegen__snapshot_pipe_unwrap.snap  snapshot_codegen__snapshot_pipes.snap  snapshot_codegen__snapshot_record_spread.snap  (+27 more)
(+80 files in other folders)
