[workspace]
members = [".", "crates/floe-wasm"]
resolver = "3"

[package]
name = "floe"
version = "0.1.0"
edition = "2024"
description = "A programming language that compiles to TypeScript + React"
license = "MIT"
repository = "https://github.com/milkyskies/floe"
homepage = "https://github.com/milkyskies/floe"
keywords = ["compiler", "typescript", "react", "programming-language"]
categories = ["compilers", "development-tools"]
readme = "README.md"

[lib]
name = "floe"
path = "src/lib.rs"

[[bin]]
name = "floe"
path = "src/main.rs"

[dependencies]
anyhow = "1"
ariadne = "0.5"
clap = { version = "4", features = ["derive"] }
notify = "7"
rowan = "0.16"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tower-lsp = "0.20.0"

[dev-dependencies]
insta = "1.46.3"
