[workspace]
members = [".", "crates/floe-wasm"]
resolver = "3"

[package]
name = "floe"
version = "0.1.0"
edition = "2024"

[lib]
name = "floe"
path = "src/lib.rs"

[[bin]]
name = "floe"
path = "src/main.rs"

[dependencies]
anyhow = "1"
ariadne = "0.5"
clap = { version = "4", features = ["derive"] }
notify = "7"
oxc_allocator = "0.119.0"
oxc_ast = "0.119.0"
oxc_parser = "0.119.0"
oxc_span = "0.119.0"
rowan = "0.16"
serde = "1.0.228"
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio = { version = "1.50.0", features = ["full"] }
tower-lsp = "0.20.0"

[dev-dependencies]
insta = "1.46.3"
