[workspace]
members = [".", "crates/floe-wasm"]
resolver = "3"

[package]
name = "floe"
version = "0.1.20"
edition = "2024"
description = "A programming language that compiles to TypeScript + React"
license = "MIT"
repository = "https://github.com/milkyskies/floe"
homepage = "https://github.com/milkyskies/floe"
keywords = ["compiler", "typescript", "react", "programming-language"]
categories = ["compilers", "development-tools"]
readme = "README.md"

[lib]
name = "floe"
path = "src/lib.rs"

[[bin]]
name = "floe"
path = "src/main.rs"

[dependencies]
anyhow = "1"
ariadne = "0.6"
clap = { version = "4", features = ["derive"] }
notify = "8"
oxc_allocator = "0.122.0"
oxc_ast = "0.122.0"
oxc_parser = "0.122.0"
oxc_span = "0.122.0"
rowan = "0.16"
serde = "1.0.228"
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio = { version = "1.50.0", features = ["full"] }
tower-lsp = "0.20.0"

[dev-dependencies]
insta = "1.46.3"
