[package]
name = "floe-wasm"
version = "0.1.12"
edition = "2024"
description = "WASM build of the Floe compiler for browser usage"
license = "MIT"
repository = "https://github.com/milkyskies/floe"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
floe = { path = "../.." }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
